import usuarios
class admin(usuarios):
      def consulta():
          pass
      def edicion():
          pass
 
 